# kirin

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: rust.yml
src/: kicad.rs  main.rs  svg.rs  template.rs
src/assets/: script.js  style.css  template.html
