[package]
name = "kirin-rs"
version = "0.1.0"
edition = "2024"
description = "A diff tool for KiCAD projects"
repository = "https://github.com/markhakansson/kirin"
keywords = ["kicad", "diff"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "kirin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gix = { version = "0.70", features = ["revision"] }
oxvg_ast = { version = "0.0.5", features = ["roxmltree"] }
oxvg_optimiser = { version = "0.0.5", default-features = false }
